# vcfverifier

./: Cargo.toml  README.md
src/: main.rs
test/: volvox.filtered.vcf  volvox.filtered.vcf.bgz
