[package]
name = "vcfverifier"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.15", features = ["derive"] }
faimm = "0.3.0"
flate2 = "1.0.24"
rust-htslib = "0.39.5"
