[package]
name = "vcfverifier"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/cmdcolin/vcfverifier"
description = "Verifies that a given VCF matches a given FASTA by comparing the REF column in the VCF to the underlying FASTA sequences"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.15", features = ["derive"] }
faimm = "0.3.0"
flate2 = "1.0.24"
rust-htslib = "0.39.5"
